--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       var carousel = new $.carousel('#carousel ul', {
         height: 438, 
         width: 700, 
-        nextCallback: function () { console.log('Showing the next slide.')}, 
-        prevCallback: function () { console.log('Showing the previous slide.')}
+        nextCallback: function () { console.log('Showing the next slide.'); }, 
+        prevCallback: function () { console.log('Showing the previous slide.'); }
       });
     </script>
   </body>
